Fixed long text overflow for tier value

--- a/widgets/failover/failover.scss
+++ b/widgets/failover/failover.scss
@@ -63,6 +63,7 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
     top: 10px;
     position: absolute;
     width: 90%;
+    word-wrap: break-word;
   }
 
   .platinum {
